﻿shmuel 18.12.2015 18:48:29 +0200 - build 549

1. LuaFAR: добавлена функция win.DeleteRegValue.

shmuel 18.12.2015 14:09:39 +0200 - build 548

1. Удалена макрофункция printf (mf.printf и _G.printf).

shmuel 13.12.2015 08:52:51 +0200 - build 547

1. При старте Фар не исполнялись автостартующие макросы, у которых area="Common".

zg 08.12.2015 03:51:59 +0200 - build 546

1. moonscript 0.4.0.

shmuel 15.11.2015 09:10:25 +0200 - build 545

1. Уточнение 543.

shmuel 11.11.2015 12:17:37 +0200 - build 544

1. MoonScript 0.3.2.

shmuel 10.11.2015 18:19:12 +0200 - build 543

1. LuaFAR (generic plugin):
   Очередная (после билда 533) попытка справиться с ситуацией, когда экспортируемые функции плагина
   вызываются из разных потоков с перекрытием во времени. "Перекрывающие" вызовы, поступающие не из
   "перекрываемого" потока, должны игнорироваться (холостой возврат без исполнения).

shmuel 01.11.2015 14:10:39 +0200 - build 542

1. Откат 540-541. Данный вид события может быть получен имеющимися средствами (mf.postmacro() из макрофайла).

shmuel 31.10.2015 22:34:42 +0200 - build 541

1. Уточнение 540.

shmuel 31.10.2015 19:33:22 +0200 - build 540

1. Добавлен новый вид события: group="MacrosLoaded". Обработчики вызываются по завершению загрузки макрофайлов.

shmuel 28.10.2015 19:17:43 +0200 - build 539

1. Рефакторинг (синхронный с рефакторингом в Far build 4450).

shmuel 28.10.2015 13:23:40 +0200 - build 538

1. Изменение API: загрузочные функции 'Macro' и 'Event' теперь возвращают true в случае успеха,
   а не число-идентификатор макроса/события, как было раньше.

2. Рефакторинг.

shmuel 26.10.2015 19:07:00 +0200 - build 537

1. Приоритет по умолчанию у общих (area="Common") макросов теперь такой же, как у прочих макросов, то-есть 50.

shmuel 25.10.2015 17:24:57 +0200 - build 536

1. Продолжение 516:
   a) пункты меню выбора макроса выводятся отсортированными;
   б) заголовок консоли показывает заголовок данного меню;

shmuel 16.10.2015 19:08:56 +0200 - build 535
