@@ -191,16 +191,19 @@ static int win_DeleteRegKey(lua_State *L)
 	return 1;
 }
 
-// Result = DeleteRegValue (Root, ValueName)
+// Result = DeleteRegValue (Root, Key, ValueName)
 //   Root:      [string], one of "HKLM", "HKCC", "HKCR", "HKCU", "HKU"
-//   ValueName: value name, [string]
+//   Key:       registry key, [string]
+//   ValueName: value name, [optional string]
 //   Result:    TRUE if success, FALSE if failure, [boolean]
 static int win_DeleteRegValue(lua_State *L)
 {
+	HKEY hKey;
 	HKEY hRoot = CheckHKey(L, 1);
-	const wchar_t* Name = check_utf8_string(L, 2, NULL);
-	long res = RegDeleteValueW(hRoot, Name);
-	lua_pushboolean(L, res==ERROR_SUCCESS);
+	const wchar_t* Key = check_utf8_string(L, 2, NULL);
+	const wchar_t* Name = opt_utf8_string(L, 3, NULL);
+	lua_pushboolean(L, RegOpenKeyExW(hRoot, Key, 0, KEY_SET_VALUE, &hKey)==ERROR_SUCCESS &&
+		RegDeleteValueW(hKey, Name)==ERROR_SUCCESS);
 	return 1;
 }
 
