@@ -1,4 +1,8 @@
-﻿shmuel 18.12.2015 18:48:29 +0200 - build 549
+﻿shmuel 18.12.2015 20:17:25 +0200 - build 550
+
+1. Уточнение 549.
+
+shmuel 18.12.2015 18:48:29 +0200 - build 549
 
 1. LuaFAR: добавлена функция win.DeleteRegValue.
 
